# resource/schema/body/sys_financial_ledger.js
@@ -1,0 +1,10 @@
+const FinancialLedgerSchema = {
+  BodyFinancialLedgerSchema: {
+    category_id: "668385cc136530f33f660a65",
+    type_id: "6683858e136530f33f660a63",
+    amount: 20000,
+    note: "naik KRL",
+  },
+};
+
+module.exports = FinancialLedgerSchema;
